errors.log
tyr.cpp: In function ‘void start_server(std::string)’:
tyr.cpp:713:27: warning: ‘bool zmq::detail::socket_base::recv(zmq::message_t*, int)’ is deprecated: from 4.3.1, use recv taking a reference to message_t and recv_flags [-Wdeprecated-declarations]
  713 |   tyr_socket.recv(&message);
      |                           ^
In file included from tyr.cpp:18:
/usr/include/zmq.hpp:1267:10: note: declared here
 1267 |     bool recv(message_t *msg_, int flags_ = 0)
      |          ^~~~
tyr.cpp:722:24: warning: ‘bool zmq::detail::socket_base::send(zmq::message_t&, int)’ is deprecated: from 4.3.1, use send taking message_t and send_flags [-Wdeprecated-declarations]
  722 |   tyr_socket.send(reply);
      |                        ^
In file included from tyr.cpp:18:
/usr/include/zmq.hpp:1191:10: note: declared here
 1191 |     bool send(message_t &msg_,
      |          ^~~~
editor.cpp: In constructor ‘editor::Editor::Editor(int, int, int, int, std::filesystem::__cxx11::path)’:
editor.cpp:48:28: error: variable ‘std::ifstream file’ has initializer but incomplete type
   48 |         std::ifstream file(filepath.c_str());
      |                            ^~~~~~~~
In file included from window.h:9,
                 from editor.h:10,
                 from editor.cpp:6:
editor.cpp: In member function ‘void editor::Editor::rewrite_line_nums()’:
editor.cpp:88:31: error: ‘borderFocusedColor’ was not declared in this scope
   88 |         drawBorder(COLOR_PAIR(borderFocusedColor));
      |                               ^~~~~~~~~~~~~~~~~~
editor.cpp:104:37: error: ‘lineNumbersColor’ was not declared in this scope
  104 |             wattron(win, COLOR_PAIR(lineNumbersColor));
      |                                     ^~~~~~~~~~~~~~~~
editor.cpp: In member function ‘void editor::Editor::rewrite()’:
editor.cpp:120:37: error: ‘textColor’ was not declared in this scope
  120 |             wattron(win, COLOR_PAIR(textColor));
      |                                     ^~~~~~~~~
editor.cpp: In member function ‘virtual void editor::Editor::handleInput(int)’:
editor.cpp:203:65: error: ‘screen_rows’ was not declared in this scope
  203 |                     cursor.screen_y = std::min(cursor.line_num, screen_rows);
      |                                                                 ^~~~~~~~~~~
In file included from window.h:9,
                 from editor.h:10,
                 from editor.cpp:6:
editor.cpp:249:45: error: ‘textColor’ was not declared in this scope
  249 |                     wattron(win, COLOR_PAIR(textColor));
      |                                             ^~~~~~~~~
editor.cpp:258:41: error: ‘textColor’ was not declared in this scope
  258 |                 wattron(win, COLOR_PAIR(textColor));
      |                                         ^~~~~~~~~
